Fixed alignment for large devices

--- a/main.css
+++ b/main.css
@@ -15,11 +15,27 @@ b#headTitle{
 	color: #E10018;
 	text-align: center;
 }
-@media (min-width: 1441px) {
+@media (min-width: 1921px) {
 	.main{
 		margin-left: 24%;
 		margin-right: 24%;
 
+	}
+	nav.navbar.navbar-default.navbar-fixed-top{
+		margin-left: 17%;
+		margin-right: 17%;
+	}
+}
+
+@media (min-width: 1441px) and (max-width:1920px) {
+	.main{
+		margin-left: 12%;
+		margin-right: 12%;
+
+	}
+	nav.navbar.navbar-default.navbar-fixed-top{
+		margin-left: 1%;
+		margin-right: 1%;
 	}
 }
 @media (min-width: 1201px){
@@ -153,7 +169,8 @@ body {
 .panel-body{
 	height: 100%;
 	width: 100%;
-
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .panel-default{
@@ -255,6 +272,7 @@ nav.nana.navbar-collapse.collapse{
 	margin-left: 10%;
 	margin-right: 10%;
 	height: 140px;
+	width:80%;
 }
 a#homeButton{
 	padding-left: 0;
